4.5 -> 5.0:
    - rse: allow actually used tar(1) and patch(1) tools to be set via %__tar and %__patch
    - rse: add support for patch(1)'s "-d" option to internal macro %patch
    - fray: allow -bb --short-circuit
    - rse: allow leading whitespaces on %setup and %patch lines in *.spec files
    - rse: resolve portability issue related to double definition of mergesort(3)
    - rse: fix building under UnixWare (blind port)
    - rse: fix building under FreeBSD 7-CURRENT
    - rse: fix building under NetBSD 3.1
    - rse: partially cleaned up the "configure.ac" scripts.
    - rse: improve Autoconf glue to flexibly build against third-party libraries (RPM_CHECK_LIB)
    - jbj: collect CentOS5 redhat-rpm-config changes for reference composting.
    - rse: calculate timezone directly, don't rely on timezone variable.
    - rse: remove the hysterical bzip2 interface.
    - rse: add the missing Autoconf glue code for using mmap(2) in the code
    - rse: (temporarily) remove partial Lua/libsyck support from build environment
    - jbj: refactor fi->replaced to persistent rpmte storage.
    - jbj: bump library and API versions to 5.0.
    - rse: provide portability fallbacks for sighold(3), sigrelse(3) and sigpause(3)
    - rse: allow RPM to build again even if iconv(3) is not available
    - rse: provide --with-db-{largefile,rpc,mutex} options for flexibly building DB
    - rse: portability: replace hard-coded -ldl (Linux) for Lua with Autoconf checks
    - rse: added devtool/devtool.conf build environment helper
    - rse: pruned tree from third-party libraries (except for zlib, db and lua)
    - goeran: updated "sv" translation.
    - rse: cleaned up the "autogen.sh" scripts.
    - jbj: skip packages/headers with unverifiable signatures.
    - start rpm-5.0 development.

4.4.9 -> 4.5:
    - jbj: fix ptr alignment problem seen on pld/sparc64.
    - jbj: re-add /usr/bin/rpmbuild for now, poptBT option wiring needs fixing.
    - jbj: pass -F fnum to patch (#243720).